[575077] Fix compilation errors with Java 8
For the moment the BREE is still JavaSE-1.8, so the code should
compile with an actual Java 1.8 SDK.

Bug: https://bugs.eclipse.org/bugs/show_bug.cgi?id=575077
Change-Id: If83a6353999f5c469232dfb6aab5db1437778161
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>